thecut/media/static/media/admin.css
/* ... */
    
    .media-attachedmediaitems .media-picker .media-selected_objects .action.confirm {
      background-color: #01acf1;
    }
  
  .media-attachedmediaitems .media-picker .media-filter_objects form .search {
    position: relative;
    height: 23px;
    background: #898989; /* for non-css3 browsers */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#898989', endColorstr='#666666'); /* for IE */
    background: -webkit-gradient(linear, left top, left bottom, from(#898989), to(#666666)); /* for webkit browsers */
    background: -moz-linear-gradient(top, #898989, #666666); /* for firefox 3.6+ */ 
  }
  
  .media-attachedmediaitems .media-picker .media-filter_objects form input[type="text"] {
    position: absolute;
    top: 0;
    left: 0;
    padding: 0;
    margin: 0;
    width: 155px;
    height: 21px;
    border: 1px solid #a3a4a7;
    line-height: 21px;
  }
  
  .media-attachedmediaitems .media-picker .media-filter_objects form input[type="submit"] {
    position: absolute;
    overflow: hidden;
    top: 0;
    right: 0;
    width: 32px;
    height: 23px;
    border-style: none;
    border-radius: 0;
    background-color: transparent;
    background-image: url("media-select-search.png");
    background-repeat: no-repeat;
    background-position: center center;
    text-indent: 50px;
  }
  
  .media-attachedmediaitems .media-picker .media-filter_objects form ul {
      margin: 0;
      padding: 0;
  }
    
    .media-attachedmediaitems .media-picker .media-filter_objects form ul li {
        position: relative;
        float: left;
        display: block;
        list-style-type: none;
    }
      
      .media-attachedmediaitems .media-picker .media-filter_objects form ul li label {
        position: relative;
        display: block;
        padding: 0 5px;
        margin: 10px 20px 0 0;
        background-color: #272727;
        color: #898888;
        font-size: 8px;
        line-height: 18px;
        text-transform: uppercase;
        cursor: pointer;
      }
        
        .media-attachedmediaitems .media-picker .media-filter_objects form ul li label:after {
          position: absolute;
          content: " ";
          display: block;
          right: -18px;
          top: 0;
          height: 0;
          width: 0;
          border: solid 9px transparent;
          border-left: solid 9px #272727;
        }
        
        .media-attachedmediaitems .media-picker .media-filter_objects form ul li.active label {
          background-color: #898888;
          color: #272727;
        }
          
          .media-attachedmediaitems .media-picker .media-filter_objects form ul li.active label:after {
            border-left-color: #898888;
          }
        
        .media-attachedmediaitems .media-picker .media-filter_objects form ul li label input {
          display: none;
        }

